# biome-text

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .swagger-codegen-ignore  .travis.yml  404.html  CHANGELOG.rst  Configurations.html  Dockerfile  MANIFEST.in  Makefile  README.md  REVIEW_NOTES.md  docker-compose.yml  environment.yml  environment_dev.yml  index.html  requirements.deploy.txt  requirements.install.txt  requirements.test.txt  requirements.txt  setup.cfg  setup.py  versions.txt
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  main.yml  tests.yml  tests_docs.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: search.html
allennlp_extensions/: __init__.py  __version__.py  run.py
allennlp_extensions/commands/: __init__.py  evaluate.py  utils.py
allennlp_extensions/data/: __init__.py  dataset.py
allennlp_extensions/models/: __init__.py  sequence_classifier.py
api/: index.html
assets/css/: 0.styles.01018554.css  0.styles.0402f7ee.css  0.styles.05551826.css  0.styles.06079c0d.css  0.styles.0700a6cf.css  0.styles.0a5653df.css  0.styles.137b0642.css  0.styles.138b784a.css  0.styles.158344bf.css  0.styles.39a793a6.css  0.styles.3b3893ec.css  0.styles.3bcc76c2.css  0.styles.3c97221e.css  0.styles.3ea83415.css  0.styles.476c9859.css  0.styles.5a70a865.css  0.styles.638e7c3f.css  0.styles.667314c9.css  0.styles.6a9b1a4d.css  0.styles.6d072fbc.css  0.styles.7d7afe25.css  0.styles.7d88232b.css  0.styles.82ead2c7.css  0.styles.8e64259b.css  0.styles.98e6f708.css  0.styles.9a136751.css  0.styles.9a37429f.css  0.styles.a62b36fe.css  0.styles.b086c8eb.css  0.styles.b1beecc8.css  0.styles.cb09adfa.css  0.styles.cd3a8880.css  0.styles.d0bc8b89.css  0.styles.d41a375c.css  0.styles.d976e78e.css  0.styles.daae4c30.css  0.styles.e06cde4c.css  0.styles.e7ba19cc.css  0.styles.eb5976af.css  0.styles.f11ec974.css  (+4 more)
assets/js/: 10.069eb75d.js  10.17528edb.js  10.214ecf0e.js  10.2274a82a.js  10.2529f91c.js  10.256253ff.js  10.25f0d8c7.js  10.2b6bf998.js  10.34dc2eab.js  10.386b10b7.js  10.3b288a75.js  10.3c0beacd.js  10.3c6a7f16.js  10.403fa430.js  10.423e3e15.js  10.470fdc7d.js  10.474c7158.js  10.4b75e493.js  10.4c760444.js  10.4e1825c5.js  10.4fd81af6.js  10.52d08d5a.js  10.5648cedd.js  10.59da06d7.js  10.5dfca671.js  10.5e3870e4.js  10.65665b68.js  10.67cadbec.js  10.690db3eb.js  10.6c1a2b90.js  10.716e3a73.js  10.84de733d.js  10.856b1d25.js  10.857ba6d2.js  10.862aace4.js  10.86812f24.js  10.87431d31.js  10.878179e3.js  10.878f133e.js  10.8c778058.js  (+4296 more)
biome/: __init__.py  __main__.py  __version__.py  helpers.py
biome-text-ui/: docker-compose.yml  package.json  vue.config.js
biome-text-ui/deployment/: deployment.yml
biome-text-ui/src/: App.vue
biome/allennlp/: __init__.py
biome/commands/: utils.py
biome/data/: __init__.py  helpers.py  utils.py
biome/models/: __init__.py  abstract_classifier.py  bidaf_pair_classifier.py  sequence_classifier.py  sequence_pair_classifier.py
biome/service/: __init__.py
biome/spec/: __init__.py  data_source.py  data_source_format.py  data_source_role.py  data_source_schema.py  data_source_schema_entry.py  data_source_settings.py  metadata.py  model_connect.py  model_definition.py  model_definition_topology.py  model_forward.py  model_revision.py  utils.py
biome/text/: __main__.py
docker/: Dockerfile  Dockerfile.deps
docs/: Makefile  api.rst  conf.py  index.rst  package.json  prepare_versioned_build.sh  requirements.txt
docs/.templates/: config.mako  html.mako
docs/api/: biome.text.commands.BiomeExplore.rst  biome.text.dataset_readers.SequencePairClassifierReader.rst  biome.text.interpreters.IntegratedGradient.rst  biome.text.models.SequencePairClassifier.rst  biome.text.pipelines.Pipeline.rst  biome.text.pipelines.SimilarityClassifierPipeline.rst
docs/commands/: index.rst
docs/dataset_readers/: index.rst
docs/docs/: README.md
docs/guides/: dev.contribution.HOWTO.md  releases.HOWTO.md
docs/internal_docs/: configs.md
docs/interpreters/: index.rst
docs/models/: index.rst
docs/pipelines/: index.rst
doctrees/api/: biome.text.commands.BiomeExplore.doctree  biome.text.commands.BiomeLearn.doctree  biome.text.commands.BiomeRestAPI.doctree  biome.text.commands.BiomeUI.doctree  biome.text.dataset_readers.DataSourceReader.doctree  biome.text.dataset_readers.SequenceClassifierReader.doctree  biome.text.dataset_readers.SequencePairClassifierReader.doctree  biome.text.dataset_readers.TextTransforms.doctree  biome.text.interpreters.IntegratedGradient.doctree  (+10 more)
documentation/: basics.html  build_docs.py  community.html  concepts.html  index.html  mkdocs.yml  package.json
examples/: Untitled.ipynb  bimpm.yaml  bimpm_classification.py  first_train.csv  second_train.csv  test_german.csv  test_html.py  token_classifier_from_text_classification.py
html/: .buildinfo  api.html  genindex.html  get_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
master/: 404.html  index.html
mk_docs/: build_apidocs.py  mkdocs.yml
nav.01.api/: index.html
nav.02.documentation/: GettingStarted.html  Introduction.html  Lorem.html  community.html  index.html
pipelines/: codefresh.yml
recognai/: __init__.py  run.py
site/: 404.html  index.html  sitemap.xml
tests/: __init__.py  conftest.py  test_biome_dataset_reader.py  test_combine_hocon.py  test_context.py  test_dataset_reader.py  test_es_reader.py  test_load_datasets.py  test_parallel_dataset_reader.py  test_preprocess.py  test_sequence_classifier_predictor.py  test_sequence_pair_classifier.py  test_support.py  test_tokenizer.py  text_classification_integration_test.py
ui/: .eslintrc.js  README.md  package.json
v1.0.0/: 404.html  index.html
v2.0.0/: 404.html  index.html
v2.0.1rc1/: 404.html  index.html
v2.1.0/: 404.html  index.html
v2.2.0/: 404.html  index.html
v3.0.0/: 404.html  index.html
v3.1.0/: 404.html  index.html
v3.2.0/: 404.html  index.html
v3.2.1/: 404.html  index.html
v3.3.0/: 404.html  index.html
(+4091 files in other folders)
