# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = biome-text
description = Biome plaftform for deep learning models
author = Francisco Aranda
author-email = francisco@recogn.ai
license = mit
url = https://pyscaffold.org/
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    allennlp>=0.8.0
    torch>=1.0.0
    dask[complete]>=1.0,<2.0
    cachey>=0.1,<0.2
    # interactive console input
    inquirer>=2.5.1,<2.6.0
    smart-open>=1.7.0
    flatten_json>=0.1.0
    coloredlogs
    # fix pyyaml version to avoid package incompatibilities
    pyyaml>=3.0,<4.0
    pdfminer.six
    beautifulsoup4
    ujson
    spacy
    pandas
    elasticsearch>=6.0,<7.0
    bokeh
    # private/not published repositories
    biome-data @ git+https://gitlab+deploy-token-48918:Lhgdcy6sa_9xBnLyaN7u@gitlab.com/recognai-team/biome/biome-data.git
    elasticsearch-runner @ git+https://github.com/recognai/python-elasticsearch-runner.git
# The usage of test_requires is discouraged, see `Dependency Management` docs
tests_require =
    nose>=1.3.7,<1.4
    coverage>=4.4,<5.0

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = .
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install biome-allennlp[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    pytest-pylint

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = biome_allennlp.module:function
# For example:
# console_scripts =
#     fibonacci = biome_allennlp.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov biome --cov-report html
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = biome.text
extensions =
    gitlab
    namespace
namespace = biome
